code new started

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
        
             <div class="mySlides fade">
             <div class="numbertext">1 / 5</div>
-                <div class="bg2"></div>
+                <div class="bg"></div>
             <div class="text">
                 <div class="box">
                     <h3>DANCE AND TECHNOLOGY</h3>
@@ -161,7 +161,8 @@
                     <div class="bg4"></div>
                 <div class="text">
                     <div class="box">
-                        <h3>"Solitude on the Surface" - A Solidão à Flor da Pele</h3>
+                        <h3>Solitude on the Surface</h3>
+                        <p> - A Solidão à Flor da Pele</p>
                          <h4>An essay on loneliness - In Memory of Ahyrton Ferreira Campos</h4>
                             <p>
                                 In 2012, I was fortunate to receive support from the Ministry of Culture (MINC) 
@@ -214,14 +215,14 @@
                 <div class="box">
                     <h3>Dance Classes</h3>
                     <h4>Ballett Classes, Contemporary Dance, Stage Dance, Choreographic Creation </h4> <br>
-                    <h5>Ballet Classic</h5><br>
+                    <h5>Ballet Classic</h5>
                     <p>In Gabriela Velasco's ballet classes, students embark on a journey into the timeless beauty and precision of classical ballet. 
                         Classical ballet is the foundation of every form of dance, and under Gabriela's expert guidance, 
                         students dive into the fascinating world of classical ballet. Through a structured curriculum, students learn fundamental 
                         techniques focusing on posture, alignment, and grace. Gabriela guides students through a comprehensive study of ballet vocabulary and musicality, fostering awareness and precision in their movements. With personalized attention and constructive feedback, students develop strength, 
                         flexibility, and poise while cultivating a deep appreciation for the rich tradition of ballet.</p>
                   
-                    <h5>Contemporary Dance</h5><br>
+                    <h5>Contemporary Dance</h5>
                     <p>
                         In Gabriela Velasco's contemporary dance class, students explore diverse movement languages like Contact Improvisation, 
                         Forsythe Technique, Ballet, Modern, and Brazilian dance, fostering freedom and creativity. 
